libv8 (2.1.6-1) unstable; urgency=low

  * New upstream release
    + package should now build clean with gcc-4.5 (Closes: 565030)

 -- Antonio Radici <antonio@dyne.org>  Sun, 21 Mar 2010 10:48:10 +0000

libv8 (2.0.3-2) unstable; urgency=low

  * Modified the upstream soname (from libv8-2.0.3.so to libv8.so.2.0.3)
    + restored patches/enable_soname.patch
    + restore the link commands in debian/rules
  * Added a libv8-2.0.3.install so that the package is not empty anymore
    + (Closes: 560433)

 -- Antonio Radici <antonio@dyne.org>  Fri, 11 Dec 2009 20:33:23 +0000

libv8 (2.0.3-1) unstable; urgency=low

  * New upstream release
  * restored jsmin.py, now it is DFSG compliant
    + debian/copyright modified accordingly
    + debian/repack.sh not needed anymore
    + debian/patches: remove-jsmin.patch deleted
  * using the library's SONAME (2.0.3)
    + debian/control: libv8-0 renamed to libv8-2.0.3
    + debian/patches: deleted enable_soname.patch
    + debian/rules: adapted to support the upstream SONAME
    + debian/libv8-0.symbols: removed, we will not maintain the symbols file
  * debian/patches: all patches refreshed against the latest upstream
  * debian/patches/x86_64_code.patch: support for ia64

 -- Antonio Radici <antonio@dyne.org>  Mon, 07 Dec 2009 19:07:51 +0000

libv8 (1.3.11+dfsg-2) unstable; urgency=low

  * debian/patches:
    + armel-build.patch: adding march armv5t to build on armel (Closes: 8636294)
    + x86_64_code.patch: build 64 bit code on x86_64 (Closes: 548467, 550448)
  * debian/watch: excluded '..' from the versions (Closes: 550581)
  * debian/changelog: added DM-Upload-Allowed: yes

 -- Antonio Radici <antonio@dyne.org>  Sun, 11 Oct 2009 13:33:11 +0100

libv8 (1.3.11+dfsg-1) unstable; urgency=low

  * Initial release (Closes: #497701)

 -- Antonio Radici <antonio@dyne.org>  Wed, 16 Sep 2009 23:01:31 +0100