@@ -3,16 +3,16 @@ http://code.google.com/p/v8/issues/detail?id=429
 
 --- a/tools/utils.py
 +++ b/tools/utils.py
-@@ -65,8 +65,12 @@
+@@ -67,10 +67,12 @@
    id = platform.machine()
    if id.startswith('arm'):
      return 'arm'
 -  elif (not id) or (not re.match('(x|i[3-6])86', id) is None):
 +  elif (not id) or (not re.match('(x|i[3-6])86$', id) is None):
      return 'ia32'
+   elif id == 'i86pc':
+     return 'ia32'
 +  elif id == 'x86_64':
-+    return 'x64'
-+  elif id == 'ia64':
 +    return 'x64'
    else:
      return None
