@@ -2,8 +2,12 @@ libv8 (2.1.6-1) unstable; urgency=low
 
   * New upstream release
     + package should now build clean with gcc-4.5 (Closes: 565030)
+  * debian/patches:
+    + refreshed all patches
+    + x86_64_code.patch: changed to drop any reference to ia64 
+      (it does not seem to build there)
 
- -- Antonio Radici <antonio@dyne.org>  Sun, 21 Mar 2010 10:48:10 +0000
+ -- Antonio Radici <antonio@dyne.org>  Sun, 21 Mar 2010 10:58:49 +0000
 
 libv8 (2.0.3-2) unstable; urgency=low
 
